--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,13 +30,13 @@ jobs:
           ls
           echo "::set-output name=tag_name::$(git tag --sort version:refname | tail -n 1)"
       - name: Create Release
-        uses: ncipollo/release-action@v1
+        #uses: ncipollo/release-action@v1
+        uses: actions/create-release@v1
         id: create_release
         env:
-          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ github.ref }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           draft: false
           prerelease: false
